--- a/NutriFit/NutriFit/Views/JelaView.xaml
+++ b/NutriFit/NutriFit/Views/JelaView.xaml
@@ -8,74 +8,95 @@
 
     <Grid>
         <Grid>
-        <ScrollViewer Margin="0,144,312,104">
-            <ItemsControl ItemsSource="{Binding Jela}" Height="492" Width="435" >
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="10" Margin="0 0 10 10">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Cijena}" FontWeight="Bold" Grid.Row="0"/>
+            <ComboBox ItemsSource="{Binding ListBoxVrste}"  SelectedItem="{Binding SelectedItem, Mode=TwoWay}"  HorizontalAlignment="Left" Height="46" Margin="26,67,0,0" VerticalAlignment="Top" Width="130" RenderTransformOrigin="1,0.731" />
+            <Button Content="Search"  Command="{Binding SearchCommand}" HorizontalAlignment="Left" Height="34" Margin="216,70,0,0" VerticalAlignment="Top" Width="68"/>
+            <Button Content="Cancel"  Command="{Binding CancelCommand}" HorizontalAlignment="Left" Height="34" Margin="324,68,0,0" VerticalAlignment="Top" Width="68"/>
 
-                                <Image Width="16" Height="16" Grid.Row="1">
-                                    <Image.Source>
-                                        <BitmapImage UriSource="{Binding Slika}" />
-                                    </Image.Source>
-                                </Image>
-                                <TextBlock Text="{Binding Kalorije}" TextWrapping="Wrap" Grid.Row="1"/>
-                                <Button Content="Dodaj u korpu" Command="{Binding DodajKorpaCommand}" Grid.Row="1">
-                                </Button>
+            <ScrollViewer Margin="0,144,312,104">
+                <ItemsControl ItemsSource="{Binding Jela}" Height="492" Width="435" >
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="10" Margin="0 0 10 10">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Text="{Binding Cijena}" FontWeight="Bold" Grid.Row="0"/>
 
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+                                    <Image Width="16" Height="16" Grid.Row="1">
+                                        <Image.Source>
+                                            <BitmapImage UriSource="{Binding Slika}" />
+                                        </Image.Source>
+                                    </Image>
+                                    <TextBlock Text="{Binding Kalorije}" TextWrapping="Wrap" Grid.Row="1"/>
+                                    <Button Content="Dodaj u korpu" Command="{Binding DataContext.DodajKorpaCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+                                            CommandParameter="{Binding}" Grid.Row="1">
+                                    </Button>
+
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </Grid>
         <Grid>
-        <ScrollViewer Margin="516,140,4,108">
-            <ItemsControl ItemsSource="{Binding Jela}" Height="492" Width="183" >
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Vertical"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="10" Margin="0 0 10 10">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Cijena}" FontWeight="Bold" Grid.Row="0"/>
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Visible"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding StavkeCollection.Count}" Value="0">
+                            <Setter Property="Visibility" Value="Hidden"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            <ScrollViewer Margin="516,140,4,108">
+                <ItemsControl ItemsSource="{Binding StavkeCollection}" Height="492" Width="183">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="10" Margin="0 0 10 10"
+                    HorizontalAlignment="Stretch">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Text="{Binding Naziv}" FontWeight="Bold" Grid.Row="0"/>
+                                    <TextBlock Text="{Binding Kolicina}" TextWrapping="Wrap" Grid.Row="1"/>
+                                    <TextBlock Text="{Binding UkupnaCijena}" TextWrapping="Wrap" Grid.Row="2"/>
+                                    <Button Content="-" Command="{Binding DataContext.ObrisiStavkuCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+                                            CommandParameter="{Binding}" Grid.Row="3">
+                                    </Button>
+                                    <Button Content="+" Command="{Binding DataContext.PovecajBrojStavkiCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+                                            CommandParameter="{Binding}" Grid.Row="4">
+                                    </Button>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
 
-                                
-                                <TextBlock Text="{Binding Kalorije}" TextWrapping="Wrap" Grid.Row="1"/>
-                                <Button Content="Dodaj u korpu" Command="{Binding AddCommand}" Grid.Row="1">
-                                </Button>
-
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-            
+            </ScrollViewer>
+            <Button Content="Naplati" Command="{Binding AddPorudzbinaCommand}" HorizontalAlignment="Left" Height="64" Margin="520,490,0,0" VerticalAlignment="Top" Width="200"/>
+          
         </Grid>
-        <Button Content="Dodaj Jelo"  Command="{Binding OpenNovoJeloWindowCommand}" Margin="276,542,304,24"></Button>
+          <Button Content="Dodaj Jelo"  Command="{Binding OpenNovoJeloWindowCommand}" Margin="276,542,304,24"></Button>
     </Grid>
 </UserControl>
