--- a/NutriFit/NutriFit/Views/NovoJeloView.xaml
+++ b/NutriFit/NutriFit/Views/NovoJeloView.xaml
@@ -5,32 +5,104 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NutriFit.Views"
         mc:Ignorable="d"
-        Title="NovoJeloView" Height="480" Width="800">
-    <Grid Margin="0,0,0,14">
-        <Label Content="Naziv" HorizontalAlignment="Left" Height="35" Margin="30,44,0,0" VerticalAlignment="Top" Width="109" RenderTransformOrigin="0.228,0.342"/>
-        <TextBox Text="{Binding Naziv, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="26" Margin="96,47,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="114" RenderTransformOrigin="0.57,0.731"/>
-        <Label Content="Slika" HorizontalAlignment="Left" Height="32" Margin="27,98,0,0" VerticalAlignment="Top" Width="50"/>
-        <Button Content="Browse" Command="{Binding BrowseCommand}" Margin="218,96,506,314" />
-        <TextBox  Text="{Binding Slika, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="94,96,596,314" RenderTransformOrigin="-2.746,2.488" />
-        <Label Content="Sifra kasa" HorizontalAlignment="Left" Height="32" Margin="25,154,0,0" VerticalAlignment="Top" Width="66"/>
-        <TextBox Text="{Binding SifraKasa, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="26" Margin="97,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106"/>
-        <TextBox HorizontalAlignment="Left" Height="76" Margin="89,220,0,0" TextWrapping="Wrap" Text="{Binding Sastojci, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="156"/>
-        <Label Content="Sastojci" HorizontalAlignment="Left" Height="30" Margin="27,214,0,0" VerticalAlignment="Top" Width="80"/>
-        <Label Content="Cijena" HorizontalAlignment="Left" Height="34" Margin="15,322,0,0" VerticalAlignment="Top" Width="58"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="87,328,0,0" TextWrapping="Wrap" Text="{Binding Cijena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="90"/>
-        <Label Content="Proteini" HorizontalAlignment="Left" Height="32" Margin="399,44,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox HorizontalAlignment="Left" Height="34" Margin="539,44,0,0" TextWrapping="Wrap" Text="{Binding Proteini, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="128"/>
-        <Label Content="Ugljeni hidrati" HorizontalAlignment="Left" Height="36" Margin="401,114,0,0" VerticalAlignment="Top" Width="108"/>
-        <TextBox HorizontalAlignment="Left" Height="32" Margin="539,110,0,0" TextWrapping="Wrap" Text="{Binding UgljeniHidrati, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="122"/>
-        <Label Content="Kalorije" HorizontalAlignment="Left" Height="24" Margin="403,188,0,0" VerticalAlignment="Top" Width="90"/>
-        <TextBox HorizontalAlignment="Left" Height="32" Margin="543,186,0,0" TextWrapping="Wrap" Text="{Binding Kalorije, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="106"/>
-        <Label Content="Masti" HorizontalAlignment="Left" Height="34" Margin="405,260,0,0" VerticalAlignment="Top" Width="90"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="539,256,0,0" TextWrapping="Wrap" Text="{Binding Masti, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="104"/>
-        <Label Content="Vrsta" HorizontalAlignment="Left" Height="34" Margin="407,320,0,0" VerticalAlignment="Top" Width="86"/>
-        <Label Content="Tip" HorizontalAlignment="Left" Height="28" Margin="409,368,0,0" VerticalAlignment="Top" Width="62"/>
-        <ListBox ItemsSource="{Binding Vrste}"  SelectedItem="{Binding Vrsta, Mode=TwoWay}"   HorizontalAlignment="Left" Height="32" Margin="541,316,0,0" VerticalAlignment="Top" Width="110"/>
-        <ListBox ItemsSource="{Binding Tipovi}"  SelectedItem="{Binding Tip, Mode=TwoWay}"   HorizontalAlignment="Left" Height="38" Margin="541,372,0,0" VerticalAlignment="Top" Width="122"/>
-        <Button Content="Dodaj"  Command="{Binding AddCommand}" HorizontalAlignment="Left" Height="46" Margin="223,392,0,-1" VerticalAlignment="Top" Width="138"/>
+        Title="NovoJeloView" Height="553" Width="333">
+    <Grid Margin="0,0,0,0" Background="#F0F0F0">
+        <Grid.Resources>
+            <Style TargetType="TextBox">
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="BorderThickness" Value="1" />
+                <Setter Property="BorderBrush" Value="Gray" />
+                <Setter Property="Background" Value="White" />
+                <Setter Property="Foreground" Value="Black" />
+                <Setter Property="Width" Value="216" />
+                <Setter Property="Height" Value="25" />
+                <!-- Set the desired width -->
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="Foreground" Value="#444444" />
+                <Setter Property="FontSize" Value="12" />
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="Padding" Value="8" />
+                <Setter Property="Background" Value="#2196F3" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#1565C0" />
+                                    <!-- Change the background color on mouse over -->
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
+
+        </Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <Label Content="Naziv" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
+        <TextBox Text="{Binding Naziv, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,4,0,5"  />
+
+        <Label Content="Slika" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
+        <Button Content="Browse" Command="{Binding BrowseCommand}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="235,6,0,0" Width="80" Height="31" />
+        <TextBox IsReadOnly="True" Text="{Binding Slika}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,7" Width="126" />
+
+        <Label Content="Šifra kasa" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
+        <TextBox Text="{Binding SifraKasa, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,4,0,5" />
+
+        <Label Content="Sastojci" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
+        <TextBox Text="{Binding Sastojci, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,1,0,0" Width="216" Height="60" TextWrapping="Wrap" />
+
+        <Label Content="Cijena" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
+        <TextBox Text="{Binding Cijena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,5"  />
+
+        <Label Content="Proteini" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="29,0,0,44" Grid.RowSpan="2" />
+        <TextBox Text="{Binding Proteini, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,50" Grid.RowSpan="2" />
+
+        <Label Content="Ugljeni &#xD;&#xA;hidrati" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="29,41,0,2" Width="60" Height="42" RenderTransformOrigin="0.3,0.452" />
+        <TextBox Text="{Binding UgljeniHidrati, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,51,0,10" />
+
+        <Label Content="Kalorije" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0,0,1" />
+        <TextBox Text="{Binding Kalorije, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,7,0,10"  />
+
+        <Label Content="Masti" Grid.Row="8" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0,0,5" RenderTransformOrigin="0.59,0.038" />
+        <TextBox Text="{Binding Masti, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="8" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,0,0,5" />
+
+        <Label Content="Vrsta" Grid.Row="9" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,6,0,4" />
+        <ListBox ItemsSource="{Binding Vrste}" SelectedItem="{Binding Vrsta, Mode=TwoWay}" Grid.Row="9" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,8,0,4" Height="28" Width="216" />
+
+        <Label Content="Tip" Grid.Row="10" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,2,0,1" />
+        <ListBox ItemsSource="{Binding Tipovi}" SelectedItem="{Binding Tip, Mode=TwoWay}" Grid.Row="10" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,4,0,1" Width="216" Height="28" />
+
+        <Button Content="Dodaj" Command="{Binding AddCommand}" Grid.Row="14" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,-40" Width="141" Height="42" />
 
     </Grid>
+
 </Window>
