--- a/NutriFit/NutriFit/Views/PorudzbineView.xaml
+++ b/NutriFit/NutriFit/Views/PorudzbineView.xaml
@@ -6,7 +6,60 @@
              xmlns:local="clr-namespace:NutriFit.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
-            
+        <ListView ItemsSource="{Binding Racuni}" Grid.Row="0" Margin="10">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="5" Background="#F0F0F0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition ></RowDefinition>
+                            <RowDefinition ></RowDefinition>
+                            <RowDefinition ></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="Ukupan iznos:" Grid.Column="0" Grid.Row="1"  Margin="5" FontWeight="Bold" />
+                        <TextBlock Text="{Binding UkupnaCijena}" Grid.Column="1" Grid.Row="1" Margin="5" />
+                        <TextBlock Text="km" Grid.Column="2" Grid.Row="1" Margin="5" />
+
+                        <TextBlock Text="Stavke:" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Margin="5" FontWeight="Bold" />
+
+                        <ItemsControl Grid.Row="2"  ItemsSource="{Binding Stavke}" Grid.Column="1" Grid.ColumnSpan="2" Margin="5">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid  Margin="5" Background="WhiteSmoke" >
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition ></RowDefinition>
+                                            <RowDefinition></RowDefinition>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="Naziv" Grid.Row="0" Grid.Column="0" Margin="5" FontWeight="Bold" />
+                                        <TextBlock Text="Sifra za kasu" Grid.Row="0" Grid.Column="1" Margin="5" FontWeight="Bold" />
+                                        <TextBlock Text="Kolicina" Grid.Row="0" Grid.Column="2" Margin="5" FontWeight="Bold" />
+
+                                        <TextBlock Text="{Binding Naziv}" Grid.Column="0" Grid.Row="1" Margin="5" />
+                                        <TextBlock Text="{Binding SifraKasa}" Grid.Column="1" Grid.Row="1"  Margin="5" />
+                                        <TextBlock Text="{Binding Kolicina}" Grid.Column="2" Grid.Row="1"  Margin="5" />
+
+                                        <!-- Add more TextBlocks for other Stavka properties -->
+
+                                    </Grid>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
+
 </UserControl>
