--- a/NutriFit/NutriFit/Views/PorudzbineView.xaml
+++ b/NutriFit/NutriFit/Views/PorudzbineView.xaml
@@ -25,7 +25,7 @@
                         </Grid.RowDefinitions>
                         <TextBlock Text="Ukupan iznos:" Grid.Column="0" Grid.Row="1"  Margin="5" FontWeight="Bold" />
                         <TextBlock Text="{Binding UkupnaCijena}" Grid.Column="1" Grid.Row="1" Margin="5" />
-                        <TextBlock Text="km" Grid.Column="2" Grid.Row="1" Margin="5" />
+                        <TextBlock Text="KM" Grid.Column="2" Grid.Row="1" Margin="5" />
 
                         <TextBlock Text="Stavke:" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Margin="5" FontWeight="Bold" />
 
@@ -43,8 +43,8 @@
                                             <RowDefinition></RowDefinition>
                                         </Grid.RowDefinitions>
                                         <TextBlock Text="Naziv" Grid.Row="0" Grid.Column="0" Margin="5" FontWeight="Bold" />
-                                        <TextBlock Text="Sifra za kasu" Grid.Row="0" Grid.Column="1" Margin="5" FontWeight="Bold" />
-                                        <TextBlock Text="Kolicina" Grid.Row="0" Grid.Column="2" Margin="5" FontWeight="Bold" />
+                                        <TextBlock Text="Šifra za kasu" Grid.Row="0" Grid.Column="1" Margin="5" FontWeight="Bold" />
+                                        <TextBlock Text="Količina" Grid.Row="0" Grid.Column="2" Margin="5" FontWeight="Bold" />
 
                                         <TextBlock Text="{Binding Naziv}" Grid.Column="0" Grid.Row="1" Margin="5" />
                                         <TextBlock Text="{Binding SifraKasa}" Grid.Column="1" Grid.Row="1"  Margin="5" />
